refractor: name change of denim theme

--- a/webapp/channels/src/components/admin_console/billing/billing_summary/upsell_card.scss
+++ b/webapp/channels/src/components/admin_console/billing/billing_summary/upsell_card.scss
@@ -42,7 +42,7 @@
         width: fit-content;
         padding: 13px 20px;
         // override cloud start trial border used in other contexts
-        border: 1px solid var(--denim-button-bg) !important;
+        border: 1px solid var(--chicmic-button-bg) !important;
         border: none;
         background: var(--sys-center-channel-bg);
         font-size: 14px;
