--- a/webapp/channels/src/components/admin_console/server_logs/log_list.scss
+++ b/webapp/channels/src/components/admin_console/server_logs/log_list.scss
@@ -17,10 +17,10 @@
     }
 
     .btn-inverted {
-        border: 2px solid var(--denim-button-bg);
+        border: 2px solid var(--chicmic-button-bg);
         background: transparent;
         border-radius: 4px;
-        color: var(--denim-button-bg);
+        color: var(--chicmic-button-bg);
         font-weight: bold;
         line-height: 12px;
     }
