--- a/webapp/channels/src/components/invitation_modal/invite_as.scss
+++ b/webapp/channels/src/components/invitation_modal/invite_as.scss
@@ -44,10 +44,10 @@
                 height: 24px;
                 align-items: center;
                 padding: 0 12px;
-                border: 1px solid rgba(var(--denim-button-bg-rgb), 0.08);
-                background: rgba(var(--denim-button-bg-rgb), 0.04);
+                border: 1px solid rgba(var(--chicmic-button-bg-rgb), 0.08);
+                background: rgba(var(--chicmic-button-bg-rgb), 0.04);
                 border-radius: 20px;
-                color: var(--denim-button-bg);
+                color: var(--chicmic-button-bg);
 
                 .RestrictedIndicator__icon-tooltip-container {
                     padding: 0;
