--- a/webapp/channels/src/components/plugin_marketplace/marketplace_modal.scss
+++ b/webapp/channels/src/components/plugin_marketplace/marketplace_modal.scss
@@ -63,10 +63,10 @@
             }
 
             &.active {
-                border-bottom: 2px solid var(--denim-button-bg);
+                border-bottom: 2px solid var(--chicmic-button-bg);
 
                 a {
-                    color: var(--denim-button-bg);
+                    color: var(--chicmic-button-bg);
                 }
             }
 
