--- a/webapp/channels/src/components/preparing_workspace/roles.scss
+++ b/webapp/channels/src/components/preparing_workspace/roles.scss
@@ -39,7 +39,7 @@ $btn-margin-right: 24px;
         color: #3f4350;
 
         &.active {
-            background: rgba(var(--denim-button-bg-rgb), 0.16);
+            background: rgba(var(--chicmic-button-bg-rgb), 0.16);
         }
     }
 }
