--- a/webapp/channels/src/components/pricing_modal/downgrade_team_removal_modal/downgrade_team_removal_modal.scss
+++ b/webapp/channels/src/components/pricing_modal/downgrade_team_removal_modal/downgrade_team_removal_modal.scss
@@ -143,9 +143,9 @@
 
         .btn.btn-light {
             padding: 12px 20px;
-            background: rgba(var(--denim-button-bg-rgb), 0.08);
+            background: rgba(var(--chicmic-button-bg-rgb), 0.08);
             border-radius: 4px;
-            color: var(--sys-denim-button-bg);
+            color: var(--sys-chicmic-button-bg);
             font-size: 14px;
             font-weight: 600;
             line-height: 14px;
@@ -154,7 +154,7 @@
         .btn.btn-primary {
             padding: 12px 20px;
             margin-left: 8px;
-            background: var(--sys-denim-button-bg);
+            background: var(--sys-chicmic-button-bg);
             border-radius: 4px;
             color: #fff;
             font-size: 14px;
