--- a/webapp/channels/src/components/purchase_modal/icon_message.scss
+++ b/webapp/channels/src/components/purchase_modal/icon_message.scss
@@ -81,7 +81,7 @@
 
         .IconMessage-tertiary-button {
             button {
-                background: rgba(var(--denim-button-bg-rgb), 0.08);
+                background: rgba(var(--chicmic-button-bg-rgb), 0.08);
                 border-radius: 4px;
                 color: var(--button-bg);
             }
