--- a/webapp/channels/src/sass/utils/_mixins.scss
+++ b/webapp/channels/src/sass/utils/_mixins.scss
@@ -167,7 +167,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid var(--denim-button-bg);
+    border: 1px solid var(--chicmic-button-bg);
     background: var(--center-channel-bg);
     border-radius: 4px;
     color: var(--button-bg);
@@ -175,11 +175,11 @@
     transition: all 0.15s ease-out;
 
     &:hover {
-        background: rgba(var(--denim-button-bg-rgb), 0.08);
+        background: rgba(var(--chicmic-button-bg-rgb), 0.08);
     }
 
     &:active {
-        background: rgba(var(--denim-button-bg-rgb), 0.16);
+        background: rgba(var(--chicmic-button-bg-rgb), 0.16);
     }
 
     &:focus {
@@ -278,7 +278,7 @@
     &:focus,
     &:focus-within {
         box-sizing: border-box;
-        border: 2px solid rgba(var(--denim-button-bg-rgb), 0.32);
+        border: 2px solid rgba(var(--chicmic-button-bg-rgb), 0.32);
         box-shadow: none;
         outline: none;
     }
