--- a/webapp/channels/src/components/access_problem/access_problem.scss
+++ b/webapp/channels/src/components/access_problem/access_problem.scss
@@ -15,7 +15,7 @@
         display: flex;
         align-items: center;
         margin: 32px 0 16px 0;
-        color: var(--portal-denim);
+        color: var(--portal-chicmic);
         font-family: 'Metropolis';
         font-size: 22px;
         font-style: normal;
@@ -29,7 +29,7 @@
         max-width: 640px;
         align-items: center;
         padding: 0 40px;
-        color: var(--portal-denim);
+        color: var(--portal-chicmic);
         font-family: 'Open Sans';
         font-size: 14px;
         font-style: normal;
