--- a/webapp/channels/src/components/admin_console/billing/billing_subscriptions/limits.scss
+++ b/webapp/channels/src/components/admin_console/billing/billing_subscriptions/limits.scss
@@ -54,8 +54,8 @@
         }
 
         &.btn-secondary {
-            background: rgba(var(--denim-button-bg-rgb), 0.08);
-            color: var(--denim-button-bg);
+            background: rgba(var(--chicmic-button-bg-rgb), 0.08);
+            color: var(--chicmic-button-bg);
         }
     }
 
