--- a/webapp/channels/src/components/common/circular_chart/circular_chart.scss
+++ b/webapp/channels/src/components/common/circular_chart/circular_chart.scss
@@ -8,7 +8,7 @@
         }
 
         &.success .circle {
-            stroke: var(--denim-status-online);
+            stroke: var(--chicmic-status-online);
         }
 
         &.info .circle {
