--- a/webapp/channels/src/components/pricing_modal/pricing_modal.scss
+++ b/webapp/channels/src/components/pricing_modal/pricing_modal.scss
@@ -111,7 +111,7 @@
             }
 
             a {
-                color: var(--denim-button-bg);
+                color: var(--chicmic-button-bg);
                 font-family: 'Open Sans';
                 font-size: 14px;
                 font-style: normal;
@@ -159,7 +159,7 @@
                     }
 
                     .contact {
-                        color: var(--denim-button-bg);
+                        color: var(--chicmic-button-bg);
                     }
                 }
 
@@ -177,7 +177,7 @@
             .self-hosted-interest {
                 padding: 8px;
                 margin-top: 24px;
-                background: rgba(var(--denim-button-bg-rgb), 0.08);
+                background: rgba(var(--chicmic-button-bg-rgb), 0.08);
                 border-radius: 8px;
                 font-family: 'Open Sans';
                 font-size: 14px;
@@ -191,7 +191,7 @@
                 }
 
                 .learn {
-                    color: var(--denim-button-bg);
+                    color: var(--chicmic-button-bg);
                 }
             }
         }
@@ -336,7 +336,7 @@
                             border: none;
                             background: none;
                             border-radius: 4px;
-                            color: var(--denim-button-bg);
+                            color: var(--chicmic-button-bg);
                             font-weight: 600;
 
                             &.grayed {
@@ -346,21 +346,21 @@
                             }
 
                             &.secondary {
-                                background: rgba(var(--denim-button-bg-rgb), 0.08);
-                                color: var(--denim-button-bg);
+                                background: rgba(var(--chicmic-button-bg-rgb), 0.08);
+                                color: var(--chicmic-button-bg);
                             }
 
                             &.active {
-                                border: 1px solid var(--denim-button-bg);
+                                border: 1px solid var(--chicmic-button-bg);
                             }
 
                             &.special {
-                                background: var(--denim-button-bg);
+                                background: var(--chicmic-button-bg);
                                 color: var(--button-color);
                             }
 
                             &.green {
-                                background: var(--denim-status-online);
+                                background: var(--chicmic-status-online);
                                 color: var(--button-color);
                             }
                         }
