--- a/webapp/channels/src/sass/base/_css_variables.scss
+++ b/webapp/channels/src/sass/base/_css_variables.scss
@@ -27,9 +27,9 @@
     --sidebar-unread-text: #fff;
     --sidebar-team-background: #0b428c;
     --secondary-blue: #22406d;
-    --denim-button-bg: #1c58d9;
-    --denim-status-online: #3db887;
-    --denim-sidebar-active-border: #5d89ea;
+    --chicmic-button-bg: #1c58d9;
+    --chicmic-status-online: #3db887;
+    --chicmic-sidebar-active-border: #5d89ea;
     --title-color-indigo-500: #1e325c;
 
     // Default RGB values to be replaced by applyTheme() (do not add opacity mutations here)
@@ -59,8 +59,8 @@
     --error-box-background: 197, 67, 72;
     --sidebar-team-background-rgb: 11, 66, 140;
     --secondary-blue-rgb: 34, 64, 109;
-    --denim-status-online-rgb: 61, 184, 135;
-    --denim-button-bg-rgb: 28, 88, 217;
+    --chicmic-status-online-rgb: 61, 184, 135;
+    --chicmic-button-bg-rgb: 28, 88, 217;
     --title-color-indigo-500-rgb: 30, 50, 92;
 
     // offline indicator color stays the same in all themes, that's why it is separated from the other variables
