--- a/webapp/channels/src/sass/routes/_get-app.scss
+++ b/webapp/channels/src/sass/routes/_get-app.scss
@@ -10,9 +10,9 @@
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
 
     .get-app__logo {
-        width: 255px;
-        height: auto;
-        margin: 30px 40px;
+        width: 150px;
+        height: 157px;
+        margin: -28px 10px;
     }
 
     .get-app__custom-logo {
@@ -274,7 +274,7 @@
         .get-app__logo {
             display: block;
             width: 170px;
-            height: auto;
+            height: 170px;
             margin: 0 auto;
         }
 
